@@ -3,16 +3,16 @@
   :license {:name "MIT" :url "https://opensource.org/licenses/MIT"}
   :min-lein-version "2.7.0"
 
-  :dependencies [[org.clojure/clojure "1.9.0-RC2"]
-                 [org.clojure/clojurescript "1.9.946"]
-                 [fulcrologic/fulcro "2.0.0-beta5"]
-                 [fulcrologic/fulcro-css "2.0.0-beta1"]
+  :dependencies [[org.clojure/clojure "1.9.0"]
+                 [org.clojure/clojurescript "1.10.339"]
+                 [fulcrologic/fulcro "2.6.3"]
+                 [http-kit "2.2.0"]
+                 [ring/ring-core "1.6.3"]
+                 [bk/ring-gzip "0.3.0"]
+                 [bidi "2.1.3"]
+                 [commons-codec "1.11"]
 
-                 ; pinned versions
-                 [com.taoensso/sente "1.11.0"]
-                 [com.taoensso/encore "2.92.0"]
-                 [com.taoensso/timbre "4.10.0"]
-                 [org.clojure/core.async "0.3.443"]]
+                 [com.taoensso/sente "1.13.1" :exclusions [org.clojure/tools.reader]]]
 
   :uberjar-name "websocket_demo.jar"
 
@@ -42,9 +42,6 @@
              :production {}
              :dev        {:source-paths ["src/dev" "src/main"]
 
-                          :jvm-opts     ["-XX:-OmitStackTraceInFastThrow" "-client" "-XX:+TieredCompilation" "-XX:TieredStopAtLevel=1"
-                                         "-Xmx1g" "-XX:+UseConcMarkSweepGC" "-XX:+CMSClassUnloadingEnabled" "-Xverify:none"]
-
                           :figwheel     {:css-dirs ["resources/public/css"]}
 
                           :cljsbuild    {:builds
@@ -62,13 +59,11 @@
 
                           :plugins      [[lein-cljsbuild "1.1.7"]]
 
-                          :dependencies [[binaryage/devtools "0.9.4"]
-                                         ;[fulcrologic/fulcro-inspect "0.2.0-SNAPSHOT"]
+                          :dependencies [[binaryage/devtools "0.9.10"]
+                                         [fulcrologic/fulcro-inspect "2.2.3"]
                                          [org.clojure/tools.namespace "0.3.0-alpha4"]
                                          [org.clojure/tools.nrepl "0.2.13"]
                                          [com.cemerick/piggieback "0.2.2"]
-                                         [lein-doo "0.1.7" :scope "test"]
-                                         [figwheel-sidecar "0.5.13" :exclusions [org.clojure/tools.reader]]
-                                         [devcards "0.2.4" :exclusions [cljsjs/react cljsjs/react-dom]]]
+                                         [figwheel-sidecar "0.5.16" :exclusions [org.clojure/tools.reader]]]
                           :repl-options {:init-ns          user
                                          :nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]}}})
